testsuite/tests/properties/invalid_symbol/non_token.lkt
import common

class Example: FooNode implements TokenNode {
    @export fun p(): Symbol = node.as[FooNode].symbol
}
